August 18, 2005 - Ping Cheng

Starting from version 0.6.9, x86-64bit system support is released in a 
separate tarball. README is updated.

December 1, 2004 - Ping Cheng

This current linuxwacom release supports kernel 2.4.x & 2.6.x, XFree86 4.x, 
X11R6.7.x and X11R6.8.x. 

December 23, 2003 - Ping Cheng

This linuxwacom release supports kernel 2.4.x & 2.6.0, XFree86 4.3 or earlier. 
The configuration and installation details are updated in README.

December 22, 2002 - John E. Joganic

The wacpack project is being hosted on SourceForge as the Linux Wacom Project.
This build is now distributed under linuxwacom.

November 24, 2002 - John E. Joganic

This marks the first release of wacpack with a configure-based build
environment.  Though it will not install anything, it is capable of
building all the major drivers including wacom.o and wacom_drv.o.